--- a/antara.html
+++ b/antara.html
@@ -12,23 +12,23 @@
     <title>XML dan JSON</title>
 </head>
 
-<body onload="showGempa()">
+<body onload="showPosts()">
     <header>
-        <h1><a href="eq.html">Gempa Hari Ini</a></h1>
+        <h1><a href="antara.html">Berita Hari Ini</a></h1>
         <nav>
             <ul>
-                <li><a href="index.html" class="current">Earthquake</a></li>
+                <li><a href="index.html">Earthquake</a></li>
                 <li><a href="cnn.html">CNN</a></li>
-                <li><a href="antara.html">AntaraNews</a></li>
+                <li><a href="antara.html" class="current">AntaraNews</a></li>
                 <li><a href="cnbc.html">CNBC</a></li>
-                
             </ul>
         </nav>
     </header>
     <br>
     <br>
     <br>
-    <div id="table">
+    <div id="secwrapper">
+        <section class="blog" id="blog-section"></section>
     </div>
 
 </body>
