--- a/index.html
+++ b/index.html
@@ -9,21 +9,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XML dan JSON</title>
+    <title>Gempa Terkini</title>
 </head>
 
 <body onload="showGempa()">
     <header>
         <h1><a href="eq.html">Gempa Hari Ini</a></h1>
-        <nav>
-            <ul>
-                <li><a href="index.html" class="current">Earthquake</a></li>
-                <li><a href="cnn.html">CNN</a></li>
-                <li><a href="antara.html">AntaraNews</a></li>
-                <li><a href="cnbc.html">CNBC</a></li>
-                
-            </ul>
-        </nav>
     </header>
     <br>
     <br>
